cluster-go/applications/pacman/prod/deployment-mongo.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo
  labels:
    app: mongo
    deployment: mongo
    app.kubernetes.io/component: mongo
    app.openshift.io/runtime: mongodb
    app.kubernetes.io/part-of: pacman-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: mongo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      creationTimestamp: null
      labels:
        deployment: mongo
        version: v1
    spec:
      containers:
        - name: mongo
          image: quay.io/rh_ee_cschmitz/mongo:v1
          ports:
            - containerPort: 27017
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
